# GameMonitor

./: .build.gradle.swp  .fix_build.sh.swp  apply_config.sh  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android-build.yml
app/: .build.gradle.swp  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: placeholder.txt
app/src/main/cpp/: CMakeLists.txt  ObjectDetector.cpp  ObjectDetector.h  native-lib.cpp  ndk_struct.h
app/src/main/java/com/example/yoloscreen/: MainActivity.java
app/src/main/java/com/monitor/game/: Engine.java  MainActivity.java  MonitorService.java  OverlayView.java
